# micro-service-architecture

./: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml
services/api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/: __init__.py  dependencies.py  error_handling.py  schemas.py
services/api-gateway/app/api/middleware/: __init__.py  request_context.py
services/api-gateway/app/api/routes/: __init__.py  auth.py  health.py  matches.py  scenarios.py
services/api-gateway/app/application/: __init__.py
services/api-gateway/app/application/commands/: cancel_match.py  create_match.py
services/api-gateway/app/application/ports/: __init__.py  identity_client.py  internal_auth.py  match_client.py  scenario_client.py
services/api-gateway/app/application/queries/: __init__.py  get_match.py  list_scenarios.py
services/api-gateway/app/core/: __init__.py  config.py  container.py  exceptions.py  logging.py
services/api-gateway/app/domain/: __init__.py  auth.py  matches.py  scenarios.py
services/api-gateway/app/domain/value_objects/: __init__.py  correlation_id.py  tenant_context.py
services/api-gateway/app/infrastructure/clients/: __init__.py  deferred_internal_auth.py  (+4 more)
services/api-gateway/app/security/: __init__.py  authorization.py  token_validator.py
services/api-gateway/contracts/openapi/: openapi.yaml
services/api-gateway/scripts/: __init__.py  dev_oidc.py  issue_dev_token.py  scenario_stub.py  validate_openapi.py
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/contract/: test_openapi.py
services/api-gateway/tests/integration/: test_api.py  test_match_http_client.py  test_scenario_http_client.py
services/api-gateway/tests/security/: test_oidc_validator.py
services/api-gateway/tests/unit/: test_config.py  test_correlation_id.py  test_local_internal_auth.py
services/scenario-service/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
services/scenario-service/app/: main.py
services/scenario-service/app/api/: dependencies.py  error_handling.py  schemas.py
services/scenario-service/app/core/: config.py  container.py  exceptions.py  logging.py
services/scenario-service/app/security/: internal_auth.py
services/scenario-service/contracts/openapi/: openapi.yaml
services/scenario-service/scripts/: seed_dev_data.py
services/scenario-service/tests/: conftest.py
services/scenario-service/tests/contract/: test_openapi.py
services/scenario-service/tests/integration/: test_api.py  test_migrations.py  test_repository.py
services/scenario-service/tests/security/: test_internal_auth.py
services/scenario-service/tests/unit/: test_config.py  test_correlation_and_pagination.py  test_database_health.py  test_repository_sqlite.py
(+204 files in other folders)
