[project]
name = "api-gateway"
version = "0.1.0"
description = "Public HTTP gateway for the cyber range platform"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cryptography>=44",
  "fastapi>=0.115",
  "httpx>=0.28",
  "pydantic-settings>=2.8",
  "pyjwt[crypto]>=2.10",
  "structlog>=25",
  "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

