[project]
name = "scenario-service"
version = "0.1.0"
description = "Scenario catalog service for the cyber range platform"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.17",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.8",
  "sqlalchemy>=2.0",
  "structlog>=25",
  "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
